api: Make uid an optional parameter.
